--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,5 +12,5 @@
       </li>
     </ul>
   </nav>
-  <script src="/src/partials/header.js"></script>
+  <script src="./js/header.js"></script>
 </header>
