--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
         <a href="1-timer.html" class="nav-link">TIMMER</a>
       </li>
       <li class="nav-item">
-        <a href="2-form.html" class="nav-link">PROMISES</a>
+        <a href="2-snackbar.html" class="nav-link">PROMISES</a>
       </li>
     </ul>
   </nav>
