--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -3,7 +3,7 @@
 @import url('./base.css');
 @import url('./header.css');
 
-.timer-input {
+/* .timer-input {
   display: block;
   margin: 0 auto;
   background-color: rgb(var(--fo-bg));
@@ -15,6 +15,7 @@
   text-align: center;
   max-width: 320px;
 }
+
 .timer-input:disabled {
   background-color: rgba(var(--fo-bg), 0.2);
   color: rgba(var(--fo-fg), 0.2);
@@ -23,9 +24,9 @@
 .timer-input::placeholder {
   color: rgb(var(--fo-fg));
   font-size: 20px;
-}
+} */
 
-.button-start {
+/* .button-start {
   margin: 0 auto;
   display: flex;
   cursor: pointer;
@@ -50,7 +51,7 @@
 
 .button-start:not([disabled]):hover {
   background-color: rgb(var(--fo-fg), 1);
-}
+} */
 .timer {
   font-family: 'Share Tech Mono', monospace, system-ui;
   display: flex;
