--- a/src/css/snackbar.css
+++ b/src/css/snackbar.css
@@ -10,8 +10,6 @@
 
 .counter {
   margin: 6px auto 10px;
-
-  max-width: 320px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -38,9 +36,45 @@ input[type='number']::-webkit-inner-spin-button {
 .fieldset {
   margin: 0 auto 16px;
   border: 1px solid rgb(var(--fo-fg));
-  max-width: 320px;
+  display: flex;
+  gap: 24px;
 }
 
 .button-start {
   margin: 0 auto;
+  color: initial;
+}
+
+input[type='radio']:after {
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  top: -2px;
+  left: -1px;
+  position: relative;
+  background-color: rgb(41 37 36);
+  content: '';
+  display: inline-block;
+  visibility: visible;
+  border: 2px solid rgb(var(--fo-fg));
+}
+
+input[type='radio']:checked:after {
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  top: -2px;
+  left: -1px;
+  position: relative;
+  background-color: rgb(var(--fo-fg));
+  content: '';
+  display: inline-block;
+  visibility: visible;
+  border: 2px solid rgb(41 37 36);
+}
+
+.label-radio {
+  display: flex;
+  align-items: center;
+  gap: 4px;
 }
