--- a/src/css/snackbar.css
+++ b/src/css/snackbar.css
@@ -25,6 +25,7 @@
   font-size: 20px;
   text-align: center;
   border: 1px solid rgb(var(--fo-fg));
+  background-color: rgb(41 37 36);
 }
 
 input[type='number']::-webkit-inner-spin-button {
@@ -46,6 +47,7 @@ input[type='number']::-webkit-inner-spin-button {
 }
 
 input[type='radio']:after {
+  content: '';
   width: 15px;
   height: 15px;
   border-radius: 15px;
@@ -53,10 +55,10 @@ input[type='radio']:after {
   left: -1px;
   position: relative;
   background-color: rgb(41 37 36);
-  content: '';
   display: inline-block;
   visibility: visible;
   border: 2px solid rgb(var(--fo-fg));
+  cursor: pointer;
 }
 
 input[type='radio']:checked:after {
@@ -71,6 +73,7 @@ input[type='radio']:checked:after {
   display: inline-block;
   visibility: visible;
   border: 2px solid rgb(41 37 36);
+  cursor: pointer;
 }
 
 .label-radio {
